fixes fonts, and delegates layout spacing to parent tag

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,11 @@
-@import 'tailwindcss';
-
+/* Google Fonts needs to be imported before tailwindcss */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import 'tailwindcss';
 @import url('react-photo-view/dist/react-photo-view.css');
+
+@theme {
+  --font-raleway: 'Raleway', sans-serif;
+}
 
 :root {
   margin: 0;
